# dbmcp

./: .gitignore  CLAUDE.md  Later Features.md  README.md  codecov.yml  dbmcp.toml  pyproject.toml
.claude/: gsd-file-manifest.json  settings.json
.claude/commands/: speckit.complete.md  speckit.implement.md
.claude/hookify/: feature-merge-reminder.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  INTEGRATIONS.md
.planning/debug/: phase14-catalog-required-bypass.md  phase14-conn-id-determinism.md  phase14-list-schemas-shows-catalogs.md  phase14-url-catalog-ignored.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/notes/: 2026-05-08-think-cross-dialect-catalog-enumeration.md  2026-05-15-databricks-tls-ca-bundle-gap.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.serena/: project.yml
.serena/memories/: project_overview.md  project_structure.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: claude_config.json  inference_accuracy.md  interactive_testing.md
examples/: README.md
examples/notebooks/: 01_basic_connection.ipynb  02_table_inspection.ipynb  03_advanced_patterns.ipynb  04_column_analysis.ipynb  05_documentation_cache.ipynb  06_query_execution.ipynb
examples/shared/: notebook_helpers.py
examples/test_database/: example.db  schema.sql  setup.py
research/: FK_INFERENCE_EXECUTIVE_BRIEF.txt  FK_INFERENCE_IMPLEMENTATION_CHECKLIST.md  FK_INFERENCE_RESEARCH.md  FK_INFERENCE_SUMMARY.md  README.md  fk_inference_phase1_example.py
scripts/: check_complexity.py
spec_inputs/007/: SPECIFY_INPUT.md
specs/: BACKLOG.md  LEARNINGS.md  STATUS.md  TECH-DEBT.md
specs/001-db-schema-explorer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-fixtures-guide.md
specs/002-example-notebooks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-allow-cte-queries/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-azure-ad-integrated-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-denylist-query-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-codebase-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-analysis-tools/: data-model.md  docstring-review.md  plan.md  research.md  spec.md  tasks.md
specs/008-toon-response-format/: plan.md  spec.md  tasks.md
specs/009-concern-handling/: plan.md  spec.md  tasks.md
specs/010-multi-dialect-support/: plan.md  spec.md  tasks.md
specs/011-databricks-identifier-fixes/: plan.md  spec.md  tasks.md
src/: config.py  logging_config.py  metrics.py  serialization.py  type_registry.py
src/analysis/: __init__.py  _sql.py  column_stats.py  fk_candidates.py  pk_discovery.py
src/cache/: __init__.py  doc_generator.py  drift.py  storage.py
src/db/: azure_auth.py  connection.py  identifiers.py  metadata.py  query.py  validation.py
src/inference/: column_patterns.py  column_stats.py  columns.py  relationships.py  scoring.py  value_overlap.py
src/mcp_server/: _errors.py  analysis_tools.py  doc_tools.py  query_tools.py  schema_tools.py  server.py
src/models/: analysis.py  relationship.py  schema.py
tests/: conftest.py  helpers.py  utils.py
tests/compliance/: __init__.py  test_nfr_compliance.py
tests/examples/: test_database_setup.py
tests/fixtures/: perf_test_db.py  sqlite_schema.py  test_db_schema.sql
tests/integration/: conftest.py  test_azure_ad_auth.py  test_caching.py  test_discovery.py  test_fk_candidates.py  test_fk_inference.py  test_fk_inference_overlap.py  test_get_column_info.py  test_pk_discovery.py  test_query_execution.py  test_sample_data.py
tests/mcp_server/: test_import_error_messaging.py
tests/performance/: __init__.py  benchmark.py  report.py  test_analysis_perf.py  test_inference_scaling.py  test_nfr001.py  test_nfr002.py  test_nfr003.py
tests/staleness/: __init__.py  comparison.py  docstring_parser.py  tool_invoker.py
tests/unit/: test_analysis_models.py  test_analysis_sql.py  test_analysis_tools_helpers.py  test_async_tools.py  test_azure_auth.py  test_column_stats.py  test_columns.py  test_config.py  test_query.py  (+32 more)
(+344 files in other folders)
